# docuchat-backend

./: .gitignore  DATABASE_MIGRATION.md  README.md  lambda_handler.py  main.py  manage.py  pyproject.toml
app/: main.py
app/api/v1/: auth.py  chat.py  file_management.py  router.py
app/business/: __init__.py  auth.py
app/core/: auth.py  config.py  database.py  exceptions.py
app/core/agent/: chatNode.py
app/db/: __init__.py  sql_generator.py
app/db/migrations/: __init__.py  migration_manager.py  simple_migration.py
app/db/migrations/sql/: 20250925_171645_recreate_all_tables.sql  20250925_174934_recreate_all_tables.sql
app/models/: __init__.py  auth.py  base.py  files.py
app/schemas/: auth.py  responses.py
app/services/: agent_service.py  auth_service.py  database_service.py
app/services/database/: __init__.py  auth.py  base.py  files.py
app/services/external_apis/: base.py  google_sheets.py  pinecone.py  pinecone_service.py
app/utils/: logging.py  text_processing.py
tests/: conftest.py  test_auth.py  test_auth_service.py  test_database.py
