[project]
name = "backend"
version = "0.1.0"
description = "DocuChat FastAPI Backend for AWS Lambda"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",
    "sqlmodel>=0.0.14",
    "mangum>=0.17.0",
    "httpx>=0.25.0",
    "gspread>=5.12.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "structlog>=23.2.0",
    "uvicorn>=0.24.0",
    "libsql>=0.1.11",
    "sqlalchemy-libsql>=0.1.0",
    "pinecone>=7.3.0",
    "langgraph>=0.6.7",
    "langsmith>=0.4.31",
    "langchain[openai]>=0.3.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "pytest-cov>=4.1.0",
]
